fix: codebase cleanup
